syntax='proto3';

package grpc;
// internal gRPC message of duplicating node
message NodeCopyRo {
  // original node ID
  string node_id = 1;
  // duplicated node ID
  string copy_node_id = 2;
  string user_id = 3;
  // user uuid
  string uuid = 4;
  // original fieldIds
  repeated string field_ids = 5;
}

message NodeDeleteRo {
  // 删除节点的数组
  repeated string delete_node_id = 1;
  // 需要转换字段的关联表
  repeated string link_node_id = 2;
  // 用户ID
  string user_id = 3;
  // 用户uuid
  string uuid = 4;
}

message BasicResult {
  int32 code = 1;
  string message = 2;
  bool success = 3;
}
